# mprisence

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  OPTIMIZATION_FINDINGS.md  OPTIMIZE_REFS.md  PKGBUILD  PRIVACY.md  README.md  build.rs  config.toml  flow.mmd  mprisence.service  progress.md
.github/workflows/: aur.yml  release.yml  rust.yml  test.yml
.playwright-cli/: page-2026-06-01T14-13-53-559Z.yml  page-2026-06-01T14-14-03-601Z.yml  page-2026-06-01T14-15-13-825Z.yml  page-2026-06-01T14-22-44-940Z.yml  page-2026-06-01T14-22-51-626Z.yml
bench/: RESULTS.md
config/: config.default.toml  config.example.toml  default.toml  example.toml  template.toml
dev-scripts/: build.sh
docs/: index.html  store-listing.md  web-bridge-design.md
docs/superpowers/plans/: 2026-07-21-config-ui.md
docs/superpowers/specs/: 2026-07-21-config-ui-design.md
extension/: README.md  build.mjs  manifest.chromium.json  manifest.firefox.json  manifest.shared.json  package-lock.json  package.json
extension/src/: background.ts  content.ts  options.ts  page-world.ts  types.ts
extension/src/providers/: apple-music.ts  bandcamp.ts  base.ts  soundcloud.ts  tidal.ts  youtube-music.ts  youtube.ts
extension/src/utils/: browser-detect.ts  generic-media.test.ts  generic-media.ts
mprisence-web-bridge/: Cargo.toml  README.md  build.rs
mprisence-web-bridge/extension/: README.md  manifest.chromium.json  tsconfig.json
mprisence-web-bridge/extension/src/: types.ts
mprisence-web-bridge/extension/src/providers/: youtube-music.ts
mprisence-web-bridge/extension/src/utils/: native-messaging.ts
mprisence-web-bridge/src/: active_source.rs  main.rs  mpris.rs  native_messaging.rs  protocol.rs
packaging/: package.sh
packaging/arch/: mprisence.service  publish.sh
packaging/arch/git/: PKGBUILD  mprisence-git.install
packaging/arch/release/: PKGBUILD  mprisence.install
packaging/deb/: postinst  postrm  prerm
pkg/mprisence/: PKGBUILD
pkg/mprisence-git/: PKGBUILD
scripts/: autostart.sh  bench-idle.sh  bench.sh  example-config.sh  install.sh  publish-crate.sh  uninstall-local.sh
scripts/helper/: autostart.sh  install.sh
src/: __presence.rs  activity.rs  cli.rs  client.rs  config_ui.html  config_ui.rs  consts.rs  context.rs  cover.rs  discord.rs  doctor.rs  error.rs  event.rs  hbs.rs  lib.rs  main.rs  memory_logger.rs  metadata.rs  mprisence.rs  player.rs  presence.rs  service.rs  template.rs  utils.rs
src/cli/: mod.rs
src/config/: default.rs  error.rs  image_provider.rs  mod.rs  player.rs  schema.rs  template.rs  time.rs
src/config/cover/: mod.rs  provider.rs
src/config/image/: mod.rs  provider.rs
src/cover/: cache.rs  error.rs  mod.rs  sources.rs
src/cover/provider/: imgbb.rs  mod.rs  musicbrainz.rs
src/cover/providers/: catbox.rs  imgbb.rs  mod.rs  musicbrainz.rs
src/image/: cache.rs  mod.rs  provider.rs
src/picture/: mod.rs  provider.rs
src/player/: cmus.rs  events.rs  health.rs  mod.rs
src/setup/: bridge.rs  cover.rs  defaults.rs  discovery.rs  display.rs  editor.rs  effective.rs  fields.rs  global.rs  hints.rs  hub.rs  mod.rs  mpris.rs  patch.rs  players.rs  quick_toggle.rs  ui.rs  web.rs
src/web_bridge/: active_source.rs  mod.rs  mpris.rs  native_messaging.rs  protocol.rs
systemd/: mprisence-local.service  mprisence.service
tests/: integration_tests.rs  metadata_tests.rs  url-test-notes.md
tests/common/: mod.rs
