[package]
name = "mprisence"
version = "1.4.5"
edition = "2021"
authors = ["Phusit Somboonyingsuk"]
readme = "README.md"
homepage = "https://github.com/lazykern/mprisence"
repository = "https://github.com/lazykern/mprisence"
license = "MIT"
description = "A powerful Discord Rich Presence for MPRIS media players"
keywords = ["discord", "mpris", "linux", "media", "rich-presence"]
categories = ["multimedia", "command-line-utilities"]
exclude = [
    ".github/",
    "assets/",
    "packaging/",
    "dist/",
    "*.sh",
]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.10"
figment = { version = "0.10.19", features = ["toml"] }
handlebars = "6.3.2"
handlebars_misc_helpers = { version = "0.17.0", features = ["string", "regex"] }
log = "0.4.28"
mime_guess = "2.0.5"
mpris = "2.0.1"
notify = "8.2.0"
parking_lot = "0.12"
serde = { version = "1.0.219", features = ["derive"] }
smallvec = "1.15"
smol_str = "0.3.6"
thiserror = "2.0.17"
tokio = { version = "1.50.0", features = ["full"] }
toml = "0.9.12"
url = "2.5.7"
blake3 = "1.8.2"
async-trait = "0.1.89"
reqwest = { version = "0.12.28", features = ["json", "multipart"] }
imgbb = "1.4.0"
serde_json = "1.0"
discord-rich-presence = "1.0.0"
urlencoding = "2.1.3"
futures = "0.3.32"
base64 = "0.22.1"
lofty = "0.22.4"
semver = "1.0.27"
walkdir = "2.5.0"
interprocess = "2.4.0"
regex = "1"
catbox = "0.8.2"

[dev-dependencies]

[package.metadata.deb]
maintainer = "Phusit Somboonyingsuk <lazykern@gmail.com>"
copyright = "2025, Phusit Somboonyingsuk"
license-file = ["LICENSE", "0"]
depends = "libdbus-1-3, libgcc-s1, libc6"
assets = [
    ["target/release/mprisence", "usr/bin/mprisence", "755"],
    ["config/config.example.toml", "etc/mprisence/config.example.toml", "644"],
    ["packaging/deb/mprisence.service", "usr/lib/systemd/user/mprisence.service", "644"]
]
maintainer-scripts = "packaging/deb"
