[workspace]
resolver = "2"

[package]
name = "mprisence"
version = "1.7.0-beta.3"
edition = "2021"
authors = ["Phusit Somboonyingsuk"]
readme = "README.md"
homepage = "https://github.com/lazykern/mprisence"
repository = "https://github.com/lazykern/mprisence"
license = "MIT"
description = "A powerful Discord Rich Presence for MPRIS media players"
keywords = ["discord", "mpris", "linux", "media", "rich-presence"]
categories = ["multimedia", "command-line-utilities"]
exclude = [
    ".github/",
    "assets/",
    "packaging/",
    "dist/",
    "*.sh",
]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.10"
figment = { version = "0.10.19", features = ["toml"] }
handlebars = "6.4.1"
handlebars_misc_helpers = { version = "0.17.0", features = ["string", "regex"] }
log = "0.4.32"
mime_guess = "2.0.5"
mpris = "2.1.0"
notify = "8.2.0"
parking_lot = "0.12"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = "1.15"
smol_str = "0.3.6"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process", "io-std"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "1.1.2"
url = "2.5.8"
blake3 = "1.8.5"
async-trait = "0.1.89"
reqwest = { version = "0.13.4", features = ["json", "multipart"] }
imgbb = "1.4.0"
serde_json = "1.0"
discord-rich-presence = "1.1.0"
urlencoding = "2.1.3"
futures = "0.3.32"
base64 = "0.22.1"
lofty = "0.24.0"
semver = "1.0.28"
walkdir = "2.5.0"
interprocess = "2.4.2"
regex = "1"
catbox = "0.8.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
mpris-server = { version = "0.10", default-features = false, features = ["tokio"] }

[dev-dependencies]

[package.metadata.deb]
maintainer = "Phusit Somboonyingsuk <lazykern@gmail.com>"
copyright = "2025, Phusit Somboonyingsuk"
license-file = ["LICENSE", "0"]
depends = "libdbus-1-3, libgcc-s1, libc6"
assets = [
    ["target/release/mprisence", "usr/bin/mprisence", "755"],
    ["config/config.example.toml", "etc/mprisence/config.example.toml", "644"],
    ["packaging/deb/mprisence.service", "usr/lib/systemd/user/mprisence.service", "644"]
]
maintainer-scripts = "packaging/deb"
