[package]
name = "mprisence-web-bridge"
version = "0.1.0"
edition = "2021"
description = "Browser → MPRIS bridge for mprisence"
license = "MIT"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.10"
log = "0.4.28"
mpris-server = { version = "0.10", default-features = false, features = ["tokio"] }
parking_lot = "0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.32"
tokio = { version = "1.50.0", features = ["rt", "macros", "sync", "time", "io-std"] }
